<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GrowPath</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="top_subject">Top Subject</string>
    <string name="your_subject">Your Subject</string>
    <string name="view_all">View All</string>
    <string name="investasi_muda">INVESTASI DI USIA MUDA</string>
    <string name="make_summary">Make a Summary</string>
    <string name="resources">RESOURCES</string>
    <string name="find_more_on">Find More on:</string>
    <string name="home">Home</string>
    <string name="milestone">Milestone</string>
    <string name="or">or</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et magna in lacinia in tempor a fringilla. Nullam quis interdum augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales.</string>
</resources>